Fixed Gap

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ button {
 
 .intro {
     text-align: center;
-    width: 80%;
     place-self: center;
 }
 
